can now modify steps

--- a/index.html
+++ b/index.html
@@ -201,19 +201,26 @@
             </div>
           </section>
 
-          <!-- 5. Pas du jour (simple bouton + jauge) -->
-          <section id="steps-card" class="card">
-            <button id="btn-edit-steps">
-              <i class="fas fa-walking"></i> Pas du jour
-            </button>
-            <div class="bar-bg small">
-              <div class="bar-fill" id="steps-bar-fill"></div>
-            </div>
-          </section>
+        <!-- 5. Pas du jour (simple bouton + jauge) -->
+        <section id="steps-card" class="card">
+          <button id="btn-edit-steps">
+            <i class="fas fa-walking"></i> Pas du jour
+          </button>
+          <button id="btn-correct-steps" class="secondary-button">
+            <i class="fas fa-pen"></i> Corriger les pas
+          </button>
+          <div class="bar-bg small">
+            <div class="bar-fill" id="steps-bar-fill"></div>
+          </div>
+        </section>
 
-        </main>
       </div>
+    </section>
+
+    </main>
     </div>
+    </div>
+
 
     <!-- onglets en bas -->
     <div class="tabs">
