--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <button id="pseudo-btn">Valider</button>
       </div>
       <button id="reset-btn">Réinitialiser l’app</button>
-      <div id="app-version">App v0.2.7 (10/08/2025-New card tomorrow)</div>
+      <div id="app-version">App v0.2.7 (10/08/2025-SM19)</div>
     </div>
 
     <!-- PLAY -->
